# tajimas_d

./: .gitignore  DEPENDENCIES.md  README.md  dev.py  pyproject.toml  requirements_dev.txt  requirements_standalone.txt  setup.cfg  tajimas-d.py  tox.ini
.github/workflows/: black.yml  codeql-analysis.yml  tests.yml
src/tajimas_d/: __init__.py  _tajimas_d.py
tests/: MIT_example.fasta  allA.fasta  test_tajimasd.py
