[metadata]
name = tajimas_d
version = 1.0.1
description = Compute the Tajimas-D, Pi-Estimator or Watterson-Estimator for multiple sequences.
long_description = file: README.md
long_description_content_type=text/markdown
keywords = Tajima, Tajimas D, Pi, Watterson, Estimator, Population, Bioinformatics, Genetics
home-page = https://github.com/not-a-feature/tajimas_d/
author = Jules Kreuer / not_a_feature
license = gpl-3.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    tajimas_d
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    tox>=3.20
    miniFasta>=2.2

[options.package_data]
frameshift_aware_alignment = py.typed

[flake8]
max-line-length = 120

[pytest]
xfail_strict=true
